# astar-pairwise-aligner

./: .gitignore  Cargo.toml  README.org  Snakefile  TODO  build.rs  build_edlib.rs  index.html  index.js  justfile  makefile  output.txt  test.md  todo.org  wrapper.h
.github/workflows/: bench.yml  test.yml
analysis/: exponential_search_factor.ipynb
astar-map/: Cargo.toml
astar-map/src/: main.rs
astarpa/: Cargo.toml
astarpa-c/: Cargo.toml  astarpa.h  example.c  example.cpp  makefile
astarpa-c/src/: lib.rs
astarpa-next/: Cargo.toml
astarpa-next/examples/: path-pruning.rs
astarpa-next/src/: lib.rs  path.rs  path_pruning.rs
astarpa-v2/: Cargo.toml
astarpa-v2/src/: path.rs
astarpa-web/: Cargo.toml  index.js  makefile
astarpa-web/src/canvas/: html.rs  sdl.rs
astarpa/benches/: benchmark.rs  matches.rs  matches_inexact.rs  matches_iter.rs
astarpa/examples/: aligners_vis.rs  fig-readme.rs  fig1.rs  fig1_slides.rs  fig8-extra.rs  fig8.rs  fig_layers.rs  fuzz.rs  path-tracing.rs
astarpa/src/: affine_tests.rs  align.rs  alignment_graph.rs  astar.rs  astar_dt.rs  bucket_queue.rs  cli.rs  config.rs  contour.rs  heuristic.rs  lib.rs  main.rs  matches.rs  stats.rs  tests.rs
astarpa/src/.graveyard/: trie.rs  unordered_matches.rs
astarpa/src/contour/: bruteforce.rs  hint_contours.rs
astarpa/src/heuristic/: distances.rs  seed.rs  wrappers.rs
astarpa/src/matches/: ordered.rs  qgrams.rs
astarpa/src/tests/: align.rs  contours.rs  edge_cases.rs  mod.rs
astarpa2/: Cargo.toml
astarpa2/src/: band.rs  block.rs  blocks.rs  domain.rs  lib.rs  params.rs  ranges.rs  tests.rs
astarpa2/src/blocks/: trace.rs
astarpa2/src/domain/: local_doubling.rs
benches/: aligners.rs  benchmark.rs  matches.rs  matches_inexact.rs  matches_iter.rs  sorting.rs
data/: benchmark_100000.tsv  benchmark_1000000.csv  benchmark_10000000.tsv
data/table/: e0.05-k14.tsv  params_N100000.tsv  (+5 more)
evals/: Snakefile  benchmarks.ipynb  choosing_parameter.ipynb  commit-ids  commit-ids-human  dotplot.ipynb  evals.ipynb  fig1-visualize-explored.ipynb  figures.py  header.py  heuristic-types-lists.txt  plots.py  results.py  tmp.ipynb  upset-plots.ipynb  visualize-explored.ipynb
examples/: affine_scaling.rs  aligners_vis.rs  astar_visualization.rs  block_aligner.rs  compare.rs  diagonal_transition.rs  dtm_image.rs  equal.rs  fig-readme.rs  fig1.rs  fig1_slides.rs  fig3.rs  fig8-extra.rs  fig8.rs  fig_layers.rs  figure_1.rs  fuzz.rs  generate_dataset.rs  heuristic_video.rs  heuristic_visualization.rs  naive.rs  nanosim_to_seq.rs  nw_affine.rs  path-tracing-affine.rs  path-tracing.rs  print_heuristic.rs  profile.rs  random_distance.rs  shrink.rs  states.rs  txt_to_seq.rs  ukkonen.rs  ukkonen_image.rs  ukkonen_video.rs  zerocost.rs
pa-affine-constants/: Cargo.toml
pa-affine-types/: Cargo.toml
pa-base-algos/: Cargo.toml
pa-base-algos/examples/: affine_scaling.rs
pa-base-algos/src/: algorithm_args.rs  cigar.rs  cli.rs  cost_model.rs  diagonal_transition.rs  dt.rs  edit_graph.rs  front.rs  lib.rs  nw.rs  tests.rs
pa-base-algos/src/front/: nw_front.rs
pa-base-algos/src/nw/: affine.rs  bitpacking.rs  front.rs
pa-bin/: Cargo.toml  justfile  search.json
pa-bin/examples/: affine-gapcost.rs  affine_scaling.rs  aligners_vis.rs  domains.rs  fig-comparison.rs  fig-intro.rs  fig-layers.rs  fig-limitations.rs  fig-readme.rs  fig1.rs  fig1_slides.rs  fig8-extra.rs  fig8.rs  fig_layers.rs  fuzz.rs  gen_reads.rs  local-doubling.rs  nanosim_to_seq.rs  no-matches.rs  path-tracing-affine.rs  path-tracing.rs  random_distance.rs  readme-astarpa2.rs  readme-layers.rs  readme-videos.rs  search-bench.rs  search.rs  semi-global-debug.rs  skip-cost-plot.rs  slides-videos.rs  test.rs  thesis-cover.rs
pa-bin/examples/astarpa-figures/: comparison.rs  intro.rs  layers.rs  limitations.rs  no-matches.rs
pa-bin/examples/astarpa2-figures/: comparison.rs  doubling-large.rs  doubling.rs  intro.rs  layers.rs  limitations.rs  prepruning.rs  ranges.rs  simd.rs  trace.rs
pa-bin/examples/paper-figures/: intro.rs  limitations.rs
pa-bin/src/: cli.rs  lib.rs  main.rs
pa-bitpacking/: Cargo.toml  bench.json  justfile
pa-bitpacking/benches/nw/: main.rs  scalar.rs  simd.rs
pa-bitpacking/src/: bitpal.rs  block.rs  compute_block.rs  encoding.rs  lib.rs  main.rs  myers.rs  profile.rs  scalar.rs  search.rs  simd.rs
pa-bitpacking/src/simd/: scatter_profile.rs
pa-heuristic/: Cargo.toml
pa-heuristic/benches/: matches.rs  matches_inexact.rs  matches_iter.rs  matches_old.rs  qgrams.rs
pa-heuristic/src/: cli.rs  config.rs  contour.rs  heuristic.rs  lib.rs  matches.rs  prune.rs  seeds.rs  util.rs
pa-heuristic/src/contour/: affine_bruteforce.rs  bruteforce.rs  hint_contours.rs  rotate_to_front.rs  sh_contours.rs  sorted_contour.rs
pa-heuristic/src/heuristic/: bruteforce_csh.rs  bruteforce_gcsh.rs  chained_seed.rs  csh.rs  distances.rs  seed.rs  sh.rs  wrappers.rs
pa-heuristic/src/matches/: exact.rs  inexact.rs  local_pruning.rs  ordered.rs  prepruning.rs  qgrams.rs  suffix_array.rs
pa-test/: Cargo.toml
pa-test/src/: lib.rs
pa-vis/: Cargo.toml
pa-vis-types/: Cargo.toml
pa-vis-types/src/: canvas.rs  lib.rs
pa-vis/src/: canvas.rs  cli.rs  lib.rs  sdl.rs  visualizer.rs
pa-web/: Cargo.toml  index.html  index.js  makefile
pa-web/src/: html.rs  lib.rs  wasm.rs
pa_python/: Cargo.toml  justfile  readme.md
reference-aligners/: Cargo.toml
src/: algorithms.rs  align.rs  aligners.rs  alignment_graph.rs  astar.rs  astar_dt.rs  bucket_heap.rs  bucket_queue.rs  canvas.rs  cli.rs  config.rs  contour.rs  contour_graph.rs  cost_model.rs  costmodel.rs  datastructures.rs  diagonal_map.rs  diagonal_transition.rs  drawing.rs  fenwicktree.rs  generate.rs  graph.rs  heuristic.rs  implicit_graph.rs  increasing_function.rs  interaction.rs  lib.rs  main.rs  matches.rs  matches_inexact.rs  nw_affine.rs  random_sequence.rs  runner.rs  scored.rs  seeds.rs  stats.rs  test.rs  thresholds.rs  trie.rs  ukkonen.rs  (+5 more)
tests/: consistency.rs  contours.rs  gap_heuristic.rs  lazy_pruning.rs  leftover.rs  seed_heuristic.rs
(+126 files in other folders)
