[workspace]
members = [
    "pa-affine-types",
    "pa-heuristic",
    "pa-vis-types",
    "astarpa",
    #"pa-base-algos",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# 2x smaller file size when 'true', but that takes longer
lto = "thin"
incremental = true
opt-level = 3
debug = true
# 10x smaller file size without debug symbols.
# Breaks backtrace printing.
strip = false
