[package]
name = "astar-map"
version = "0.1.0"
edition = "2021"


[dependencies]
pa-types.workspace = true
itertools.workspace = true
clap.workspace = true
bio.workspace = true
pa-bitpacking.workspace = true
pa-heuristic.workspace = true
packed-seq.git = "https://github.com/rust-seq/packed-seq"
log = "0.4.26"
env_logger = "0.11.7"
radsort = "0.1.1"
rdst = "0.20.14"
fxhash = "0.2.1"
astarpa2.workspace = true
pa-vis.workspace = true
mimalloc = "0.1.44"
