[package]
name = "astarpa-next"
version = "0.1.0"
edition = "2024"

[dependencies]
astarpa.workspace = true
pa-base-algos.workspace = true
pa-types.workspace = true
pa-heuristic.workspace = true
instant = "0.1.12"
pa-vis.workspace = true
pa-bin.workspace = true
clap.workspace = true
pa-affine-types.workspace = true
pa-generate.workspace = true
