[package]
name = "astarpa"
authors = ["Ragnar Groot Koerkamp", "Pesho Ivanov"]
description = "An exact global pairwise aligner using A* with the [chaining] seed heurstic and match pruning."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RagnarGrootKoerkamp/astar-pairwise-aligner"
license = "MPL-2.0"
keywords = ["alignment", "edit-distance", "A*", "bioinformatics", "cli"]
readme = "README.org"
categories = ["science"]
default-run = "astarpa"

# [lib]
# #crate-type = ["cdylib", "lib"]
# crate-type = ["lib"]

[features]
default = ["cli"]
# This feature enables the cli module used by the binary, and dependencies only
# used there.
# FIXME: Add clap/wrap_help to pa-bin crate
cli = ["dep:pa-generate", "dep:parse_duration", "dep:rand", "dep:rand_chacha"]

[[bin]]
name = "astarpa"
required-features = ["cli"]

[dependencies]
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
pa-heuristic = { path = "../pa-heuristic" }
pa-vis-types = { path = "../pa-vis-types" }

# wasm-friendly instant
instant = "0.1.12"
bio = "1.1.0"
itertools = "0.10.5"
rustc-hash = "1.1.0"
clap = { version = "4.1", features = ["derive"], default-features = false }
num-traits = "0.2.15"
serde = "1.0.152"
derive_more = { version = "0.99.17", default-features = false, features = ["add_assign"] }
smallvec = { version = "1.10.0", features = ["union"] }

# Optional features only used by the binary.
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate", optional = true }
parse_duration = { version = "2.1.1", optional = true}
rand = { version = "0.8.5", optional = true}
rand_chacha = { version = "0.3.1", optional = true}

[dev-dependencies]
# For benchmarking only.
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate" }
triple_accel = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
