[package]
name = "astarpa"
authors = ["Ragnar Groot Koerkamp", "Pesho Ivanov"]
description = "An exact global pairwise aligner using A* with the [chaining] seed heurstic and match pruning."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RagnarGrootKoerkamp/astar-pairwise-aligner"
license = "MPL-2.0"
keywords = ["alignment", "edit-distance", "A*", "bioinformatics"]
readme = "README.org"
categories = ["science"]

[dependencies]
pa-types.workspace = true
pa-generate.workspace = true
pa-heuristic.workspace = true
pa-vis-types.workspace = true
clap.workspace = true
serde.workspace = true
itertools.workspace = true
bio.workspace = true

# wasm-friendly instant
instant = "0.1.12"
rustc-hash = "1.1.0"
num-traits = "0.2.15"
derive_more = { version = "0.99.17", default-features = false, features = ["add_assign"] }
smallvec = { version = "1.10.0", features = ["union"] }

# deps for CLI
parse_duration = { version = "2.1.1" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
pa-affine-types.workspace = true

[dev-dependencies]
# For benchmarking only.
triple_accel = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
