[package]
name = "astarpa"
authors = ["Ragnar Groot Koerkamp", "Pesho Ivanov"]
description = "An exact global pairwise aligner using A* with the [chaining] seed heurstic and match pruning."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RagnarGrootKoerkamp/astar-pairwise-aligner"
license = "MPL-2.0"
keywords = ["alignment", "edit-distance", "A*", "bioinformatics"]
readme = "README.org"
categories = ["science"]

[dependencies]
pa-types.workspace = true
pa-heuristic.workspace = true
pa-vis.workspace = true
clap.workspace = true
serde.workspace = true
itertools.workspace = true
bio.workspace = true
# wasm-friendly instant
instant = "0.1"
rustc-hash = "1"
num-traits = "0.2"
derive_more = { version = "2.0.1", default-features = false, features = ["add_assign"] }
smallvec = { version = "1", features = ["union"] }
pa-test = { version = "0.1.0", path = "../pa-test" }

[dev-dependencies]
# For benchmarking only.
triple_accel = "0.4"
rand.workspace = true
pa-generate.workspace = true
