[package]
name = "astarpa2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pa-types.workspace = true
pa-heuristic.workspace = true
pa-affine-types.workspace = true
pa-vis-types.workspace = true
pa-bitpacking.workspace = true

clap.workspace = true
serde.workspace = true
itertools.workspace = true

num-traits = "0.2"
pa-vis = { workspace = true, optional = true }
derivative = "2.2.0"
pa-test = { version = "0.1.0", path = "../pa-test" }
scopeguard = "1.2.0"

[dev-dependencies]
pa-generate.workspace = true
rand = "0.8"
triple_accel = "0.4.0"

[features]
example = ["dep:pa-vis", "pa-vis/sdl"]
