[package]
name = "astarpa2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pa-types.workspace = true
pa-heuristic.workspace = true
pa-affine-types.workspace = true
pa-vis.workspace = true
pa-bitpacking.workspace = true

clap.workspace = true
serde.workspace = true
itertools.workspace = true

num-traits = "0.2"
derivative = "2.2.0"
pa-test = { version = "0.1.0", path = "../pa-test" }
scopeguard = "1.2.0"

[dev-dependencies]
pa-generate.workspace = true
rand.workspace = true
triple_accel = "0.4.0"

[features]
example = ["pa-vis/sdl", "pa-bitpacking/example"]
