[package]
name = "pa-base-algos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pa-types.workspace = true
pa-heuristic.workspace = true
pa-affine-types.workspace = true
pa-vis-types.workspace = true

clap.workspace = true
serde.workspace = true
itertools.workspace = true

num-traits = "0.2"
pa-bitpacking = { version = "0.1.0", path = "../pa-bitpacking" }
pa-vis = { workspace = true, optional = true }
pa-test = { version = "0.1.0", path = "../pa-test" }

[dev-dependencies]
pa-generate.workspace = true
rand = "0.8"
triple_accel = "0.4.0"
