[package]
name = "pa-bitpacking"
version = "0.1.0"
edition = "2024"

[dependencies]
bio.workspace = true
itertools.workspace = true
pa-types.workspace = true

pa-vis = { workspace = true, optional=true }
pa-heuristic = { workspace = true, optional=true }

[dev-dependencies]
pa-generate.workspace = true
criterion = { version = "0.4.0" }
strum = { version = "0.24.1", features = ["derive"] }

[features]
small_blocks = []
example = ["dep:pa-vis", "dep:pa-heuristic"]

[[bench]]
name = "nw"
harness = false
