[package]
name = "pa-heuristic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pa-types.workspace = true

clap.workspace = true
serde.workspace = true
bio.workspace = true

# wasm-friendly instant
instant = "0.1.12"
itertools = "0.10.5"
rustc-hash = "1.1.0"
num-traits = "0.2.15"
derive_more = { version = "0.99.17", default-features = false, features = ["add_assign"] }
smallvec = { version = "1.10.0", features = ["union"] }
suffix = "1.3.0"

[dev-dependencies]
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate" }
aho-corasick = "0.7.20"
lazy_static = "1.4.0"
