[package]
name = "pa-vis"
version = "0.1.0"
edition = "2021"

[dependencies]
pa-types.workspace = true
pa-heuristic.workspace = true
pa-affine-types.workspace = true

clap.workspace = true
serde.workspace = true
itertools.workspace = true

colorgrad = "0.6"
sdl2 = { version = "0.36", features = ["ttf"], optional = true }
lazy_static = "1.4"
rand.workspace = true

[features]
sdl = ["dep:sdl2"]
