[package]
name = "pa-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pa-types.workspace = true
pa-heuristic.workspace = true
pa-vis-types.workspace = true
pa-affine-types.workspace = true
pa-vis.workspace = true
astarpa.workspace = true
pa-bin.workspace = true
serde.workspace = true

serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
web-sys = { version = "0.3", features = [
"ImageData",
"CanvasRenderingContext2d",
"HtmlCanvasElement",
"console",
"BinaryType", "Blob", "ErrorEvent", "MessageEvent", "ProgressEvent", "WebSocket",
"Document", "Element", "HtmlElement", "Node", "Window", "HtmlInputElement",
"HtmlSelectElement", "HtmlTextAreaElement"
]}
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
